Worked on Main content - Home section

--- a/WorkOut.html
+++ b/WorkOut.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orbit Bootstrap Template Demo</title>
     <link rel="stylesheet" href="styleworkout.css" />
+    <!-- Bootstrap icons link -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <header class="header d-flex align-items-center sticky-top">
@@ -49,8 +54,45 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="indexpage.html#about">Get Started</a>
+        <a class="btn-getstarted" href="WorkOut.html#about">Get Started</a>
       </div>
     </header>
+    <main class="main">
+      <section id="home" class="home section">
+        <div class="container">
+          <div class="home-content">
+            <h3>Premium Digital Solutions</h3>
+            <h2>Crafting Exceptional Digital Experiences</h2>
+            <p>
+              Pellentesque habitant morbi tristique senectus et netus et
+              malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat
+              vitae ultricies eget.
+            </p>
+            <div class="home-btns">
+              <a href="#services" class="btn-explrServices">
+                <span>Services</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
+              <a href="#watchvideo" class="btn-watchvideo">
+                <i class="bi bi-play-circle"></i>
+                <span>Watch Video</span>
+              </a>
+            </div>
+          </div>
+          <div class="home-grid">
+            <!-- Card 1 - Project Launch -->
+            <div class="home-cards proj-launch-card">
+              <div class="proj-launch-icon">
+                <i class="bi bi-rocket-takeoff"></i>
+              </div>
+
+              <div class="proj-launch-text">
+                <span>150+</span><span>Projects Launched</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
