--- a/indexpage.html
+++ b/indexpage.html
@@ -4,37 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orbit Bootstrap Template Demo</title>
-    <link rel="stylesheet" href="mainstyle.css" />
-    <!-- Favicons -->
-    <link href="img/favicon.png" rel="icon" />
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon" />
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link rel="stylesheet" href="styleworkout.css" />
+    <!-- Bootstrap icons link -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto"
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
   </head>
-  <body
-    class="index-page"
-    data-aos-easing="ease-in-out"
-    data-aos-duration="600"
-    data-aos-delay="0"
-  >
-    <!-- Header section - Stick on top -->
-    <header id="header" class="header d-flex align-items-center sticky-top">
-      <div
-        class="container position-relative d-flex align-items-center justify-content-between"
-      >
-        <a
-          href="indexpage.html"
-          class="logo d-flex align-items-center me-auto me-xl-0"
-        >
-          <h1 class="sitename">Orbit</h1>
-          <span>.</span>
-        </a>
+  <body>
+    <header class="header fixed-top">
+      <div class="container" style="align-items: center">
+        <h1>Orbit</h1>
+        <!-- <span>.</span> -->
 
         <nav id="navmenu" class="navmenu">
           <ul>
@@ -73,234 +54,81 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="indexpage.html#about">Get Started</a>
+        <a class="btn-getstarted" href="WorkOut.html#about">Get Started</a>
       </div>
     </header>
-
     <main class="main">
-      <!-- Hero Section -->
-      <section id="hero" class="hero section">
-        <div class="container" data-aos="fade-up" data-aos-delay="100">
-          <div class="row align-items-center gy-5">
-            <div class="col-lg-6" data-aos="fade-right" data-aos-delay="200">
-              <div class="hero-content">
-                <div class="hero-tag" data-aos="fade-up" data-aos-delay="250">
-                  <span class="tag-dot"></span>
-                  <span class="tag-text">Premium Digital Solutions</span>
-                </div>
-
-                <h1
-                  class="hero-headline"
-                  data-aos="fade-up"
-                  data-aos-delay="300"
-                >
-                  Crafting Exceptional Digital Experiences
-                </h1>
-
-                <p class="hero-text" data-aos="fade-up" data-aos-delay="350">
-                  Pellentesque habitant morbi tristique senectus et netus et
-                  malesuada fames ac turpis egestas. Vestibulum tortor quam,
-                  feugiat vitae ultricies eget.
-                </p>
-
-                <div class="hero-cta" data-aos="fade-up" data-aos-delay="400">
-                  <a href="#services" class="cta-button">
-                    <span>Explore Services</span>
-                    <i class="bi bi-arrow-right"></i>
-                  </a>
-                  <a
-                    href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
-                    class="glightbox cta-link"
-                    data-gallery="hero-video"
-                  >
-                    <i class="bi bi-play-circle"></i>
-                    <span>Watch Video</span>
-                  </a>
-                </div>
-              </div>
+      <section id="home" class="home section">
+        <div class="container">
+          <div class="home-content">
+            <div class="home-subheading">
+              <span class="home-sub-ball"></span>
+              <span class="home-sub-label">Premium Digital Solutions</span>
             </div>
 
-            <div class="col-lg-6" data-aos="fade-left" data-aos-delay="300">
-              <div class="stats-grid">
-                <div
-                  class="stat-card stat-card-primary"
-                  data-aos="zoom-in"
-                  data-aos-delay="350"
-                >
-                  <div class="stat-icon-wrap">
-                    <i class="bi bi-rocket-takeoff"></i>
-                  </div>
-                  <div class="stat-info">
-                    <span class="stat-value">150+</span>
-                    <span class="stat-title">Projects Launched</span>
-                  </div>
-                </div>
-
-                <div class="stat-card" data-aos="zoom-in" data-aos-delay="400">
-                  <div class="stat-icon-wrap">
-                    <i class="bi bi-heart"></i>
-                  </div>
-                  <div class="stat-info">
-                    <span class="stat-value">98%</span>
-                    <span class="stat-title">Client Satisfaction</span>
-                  </div>
-                </div>
-
-                <div class="stat-card" data-aos="zoom-in" data-aos-delay="450">
-                  <div class="stat-icon-wrap">
-                    <i class="bi bi-lightbulb"></i>
-                  </div>
-                  <div class="stat-info">
-                    <span class="stat-value">12+</span>
-                    <span class="stat-title">Years Experience</span>
-                  </div>
-                </div>
-
-                <div
-                  class="stat-card stat-card-accent"
-                  data-aos="zoom-in"
-                  data-aos-delay="500"
-                >
-                  <div class="stat-icon-wrap">
-                    <i class="bi bi-briefcase"></i>
-                  </div>
-                  <div class="stat-info">
-                    <span class="stat-value">40+</span>
-                    <span class="stat-title">Team Experts</span>
-                  </div>
-                </div>
+            <h1 class="home-heading">
+              Crafting Exceptional Digital Experiences
+            </h1>
+            <p>
+              Pellentesque habitant morbi tristique senectus et netus et
+              malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat
+              vitae ultricies eget.
+            </p>
+            <div class="home-btns">
+              <a href="#services" class="btn-explrServices">
+                <span>Services</span>
+                <i class="bi bi-arrow-right"></i>
+              </a>
+              <a href="#watchvideo" class="btn-watchvideo">
+                <i class="bi bi-play-circle"></i>
+                <span>Watch Video</span>
+              </a>
+            </div>
+          </div>
+          <div class="home-grid">
+            <!-- Card 1 - Project Launch -->
+            <div class="home-cards home-card-dark">
+              <div class="home-card-icon">
+                <i class="bi bi-rocket-takeoff"></i>
+              </div>
+              <div class="home-card-text">
+                <span class="home-card-value">150+</span
+                ><span class="home-card-label">Projects Launched</span>
+              </div>
+            </div>
+            <!-- Card 2 - Client Satisfaction -->
+            <div class="home-cards">
+              <div class="home-card-icon">
+                <i class="bi bi-heart"></i>
+              </div>
+              <div class="home-card-text">
+                <span class="home-card-value">98%</span
+                ><span class="home-card-label">Client Satisfaction</span>
+              </div>
+            </div>
+            <!-- Card 3 - Years Experience -->
+            <div class="home-cards">
+              <div class="home-card-icon">
+                <i class="bi bi-lightbulb"></i>
+              </div>
+              <div class="home-card-text">
+                <span class="home-card-value">12+</span
+                ><span class="home-card-label">Years Experience</span>
+              </div>
+            </div>
+            <!-- Card 4 - Team Experts -->
+            <div class="home-cards home-card-light">
+              <div class="home-card-icon">
+                <i class="bi bi-briefcase"></i>
+              </div>
+              <div class="home-card-text">
+                <span class="home-card-value">40+</span
+                ><span class="home-card-label">Team Experts</span>
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
-    <!-- Footer section -->
-    <footer id="footer" class="footer light-background">
-      <div class="container footer-top">
-        <div class="row gy-4">
-          <div class="col-lg-3 col-md-6 footer-info">
-            <a
-              href="indexpage.html"
-              class="logo d-flex align-items-center mb-4"
-            >
-              <span class="sitename">Orbit</span>
-            </a>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
-              tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
-            </p>
-
-            <div class="social-links d-flex mt-4">
-              <a href="#" aria-label="Twitter"
-                ><i class="bi bi-twitter-x"></i
-              ></a>
-              <a href="#" aria-label="Facebook"
-                ><i class="bi bi-facebook"></i
-              ></a>
-              <a href="#" aria-label="Instagram"
-                ><i class="bi bi-instagram"></i
-              ></a>
-              <a href="#" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
-              <a href="#" aria-label="Pinterest"
-                ><i class="bi bi-pinterest"></i
-              ></a>
-            </div>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Shop</h4>
-            <ul>
-              <li><a href="category.html">New Arrivals</a></li>
-              <li><a href="category.html">Best Sellers</a></li>
-              <li><a href="category.html">Sale Items</a></li>
-              <li><a href="category.html">Men's Collection</a></li>
-              <li><a href="category.html">Women's Collection</a></li>
-              <li><a href="category.html">Accessories</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Customer Service</h4>
-            <ul>
-              <li><a href="contact.html">Contact Us</a></li>
-              <li><a href="faq.html">FAQs</a></li>
-              <li><a href="shiping-info.html">Shipping &amp; Returns</a></li>
-              <li><a href="#">Size Guide</a></li>
-              <li><a href="account.html">Track Order</a></li>
-              <li><a href="#">Gift Cards</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Company</h4>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="about.html">Careers</a></li>
-              <li><a href="blog.html">Blog</a></li>
-              <li><a href="about.html">Sustainability</a></li>
-              <li><a href="about.html">Affiliate Program</a></li>
-              <li><a href="about.html">Store Locator</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="footer-newsletter">
-              <h4>Stay Updated</h4>
-              <p>
-                Subscribe to our newsletter for exclusive offers, new arrivals,
-                and fashion tips.
-              </p>
-              <form
-                action="forms/newsletter.php"
-                method="post"
-                class="php-email-form"
-              >
-                <div class="position-relative">
-                  <input
-                    type="email"
-                    name="email"
-                    placeholder="Your Email"
-                    required=""
-                  />
-                  <!-- <button type="submit" class="btn-subscribe">
-                    <i class="bi bi-arrow-right"></i>
-                  </button> -->
-                </div>
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">
-                  Your subscription request has been sent. Thank you!
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="container footer-bottom">
-        <div class="row gy-3">
-          <div class="col-md-6 order-2 order-md-1">
-            <div class="copyright">
-              <p>
-                © <span>Copyright</span>
-                <strong class="sitename">Orbit</strong>. All Rights Reserved.
-              </p>
-            </div>
-            <div class="credits">
-              Designed by
-              <a href="https://www.idmtechparkerode.com/">IDM Teckpark Erode</a>
-            </div>
-          </div>
-          <div class="col-md-6 order-1 order-md-2">
-            <div class="legal-links">
-              <a href="termsofservice.html">Terms of Service</a>
-              <a href="privacy.html">Privacy Policy</a>
-              <a href="privacy.html">Cookies</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
 </html>
