Formatting and corrections

--- a/indexpage.html
+++ b/indexpage.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <header class="header fixed-top">
+    <header class="header">
       <div class="hdrcontainer" style="align-items: center">
         <h1>Orbit</h1>
         <!-- <span>.</span> -->
@@ -161,5 +161,36 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="ftr-container">
+        <div>
+          <h3>Orbit</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
+            tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+          </p>
+        </div>
+
+        <div class="ftr-container">
+          <div>
+            <div class="copyright">
+              <p>
+                &copy;<span>Copyright</span>
+                <strong class="sitename">Orbit</strong>. All Rights Reserved.
+              </p>
+            </div>
+            <div class="ftr-dgnby">
+              Designed by
+              <a href="https://www.idmtechparkerode.com/">IDM Teckpark Erode</a>
+            </div>
+          </div>
+          <div class="ftr-links">
+            <a href="termsofservice.html">Terms of Service</a>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="privacy.html">Cookies</a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
